--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "my-architect-portfolio",
   "version": "0.1.0",
-  "private": true,
+  "private": false,
+  "homepage": "https://bostanydesign.com",
   "dependencies": {
     "@react-three/drei": "^9.112.0",
     "@testing-library/jest-dom": "^5.17.0",
@@ -22,7 +23,13 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d dist"
+    "deploy": "gh-pages -d build" 
+  },
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
   },
   "browserslist": {
     "production": [
