--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "my-architect-portfolio",
   "version": "0.1.0",
-  "private": true,
+  "private": false,
   "dependencies": {
     "@react-three/drei": "^9.112.0",
     "@testing-library/jest-dom": "^5.17.0",
