--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "my-architect-portfolio",
   "version": "0.1.0",
   "private": false,
-  "homepage": "https://www.bostanydesign.com",
+  "homepage": "./",
   "dependencies": {
     "@react-three/drei": "^9.112.0",
     "@testing-library/jest-dom": "^5.17.0",
