--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "gsap": "^3.12.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-router-dom": "^7.5.0",
     "react-scripts": "5.0.1",
     "react-scroll": "^1.9.0",
     "react-three-fiber": "^6.0.13",
